--- a/immutable-towers.cabal
+++ b/immutable-towers.cabal
@@ -47,6 +47,7 @@ library
         Utils.UtilitariosBase
         Utils.UtilitariosPortal
         Utils.UtilitariosTorre
+        Utils.UtilitariosInimigo
 
     -- Modules included in this library but not exported.
     -- other-modules:
@@ -97,7 +98,8 @@ test-suite immutable-towers-test
         Tarefa1Spec
         Tarefa2Spec
         Tarefa3Spec
-        TData.TestData
+        TData.TDataTarefa1
+        TData.TDataTarefa2
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
