feat: range circle when buying towers

--- a/immutable-towers.cabal
+++ b/immutable-towers.cabal
@@ -21,6 +21,7 @@ library
         Utils.UtilitariosTorre
         Utils.UtilitariosInimigo
         Utils.UtilitariosEditor
+        Utils.UtilitariosSaves
         Levels
 
     hs-source-dirs:   lib
